--- a/src/drumee/builtins/media/row/skin/helper.scss
+++ b/src/drumee/builtins/media/row/skin/helper.scss
@@ -13,7 +13,7 @@
     overflow: hidden;   
     &:hover{
       background-color:var(--default-bg);
-      // color:$default-text-reverse; //var(--ewhite); 
+      // color:var(--default-text-reverse); //var(--ewhite); 
       // .media-checkbox{
       //   display: block;
       // }
