--- a/src/drumee/builtins/window/litechat/message/skin/attachment.scss
+++ b/src/drumee/builtins/window/litechat/message/skin/attachment.scss
@@ -77,7 +77,7 @@
       }
 
       & .filename {
-        @include typo($size: 10px, $line: 12px, $weight: 300, $color: $default-text-color);
+        @include typo($size: 10px, $line: 12px, $weight: 300, $color: var(--default-text-color));
         border-radius: 0 0 6px 6px;
         bottom: 1px;
         cursor: pointer;
