--- a/src/drumee/builtins/window/schedule/skin/inbound.scss
+++ b/src/drumee/builtins/window/schedule/skin/inbound.scss
@@ -10,7 +10,7 @@
     &.drumee-text{
       width: 400px;
       border-radius: 4px;
-      @include typo($size:14px,$line:20px,$weight:400,$color:$default-text-color);
+      @include typo($size:14px,$line:20px,$weight:400,$color: var(--default-text-color));
     }
   }
 }
