--- a/src/drumee/modules/welcome/signup/skin/terms-and-conditions.scss
+++ b/src/drumee/modules/welcome/signup/skin/terms-and-conditions.scss
@@ -71,7 +71,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: $default-scrollbar-color;
+      background-color: var(--default-scrollbar-color);
       cursor: pointer;
     }
   }
