--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -26,30 +26,30 @@
 /**************** Drumee: colors used ****************/
 
 /**transferbox**/
-$default-background-window-header      : #18A3AC; //background
+// $default-background-window-header      : #18A3AC; //background
 /**transferbox**/
 
 /**text**/
-$default-text-color            : $core-default-text-color;
-$default-text-placeholder      : $core-default-text-placeholder;
-$default-text-hover            : $core-default-text-hover ;
-$default-text-caution          : $core-default-text-caution;
-$default-text-title            : $core-default-text-title;
-$default-text-reverse          : $core-default-text-reverse;
-$default-text-alert            : $core-default-text-alert;
-$default-text-success          : $core-default-text-success;//#18AC72;
-$default-text-inactivated	     : $core-default-text-inactive;
-$default-text-error            : $core-default-text-error ;
-$focus-text-placeholder        : $core-focus-text-placeholder;
+// $default-text-color            : $core-default-text-color;
+// $default-text-placeholder      : $core-default-text-placeholder;
+// $default-text-hover            : $core-default-text-hover ;
+// $default-text-caution          : $core-default-text-caution;
+// $default-text-title            : $core-default-text-title;
+// $default-text-reverse          : $core-default-text-reverse;
+// $default-text-alert            : $core-default-text-alert;
+// $default-text-success          : $core-default-text-success;//#18AC72;
+// $default-text-inactivated	     : $core-default-text-inactive;
+// $default-text-error            : $core-default-text-error ;
+// $focus-text-placeholder        : $core-focus-text-placeholder;
 
 /** border **/
-$entry-border-bottom          : $core-default-entry-border-bottom ;
-$focus-border-bottom          : $core-focus-border-placeholder;
-$default-border-notification  : #dde2e8;//$core-default-border-notification;//old :#dde2e8;//$egrey-e8
-$default-border-popup     	  : #dde2e8;//$core-default-border-popup;//#dde2e8;//$egrey-e8
-//$default-border-alert	      :#ff805c;
-$default-border-error         : $core-default-border-error;
-$default-separator            : $core-default-separator;
+// $entry-border-bottom          : $core-default-entry-border-bottom ;
+// $focus-border-bottom          : $core-focus-border-placeholder;
+// $default-border-notification  : #dde2e8;//$core-default-border-notification;//old :#dde2e8;//$egrey-e8
+// $default-border-popup     	  : #dde2e8;//$core-default-border-popup;//#dde2e8;//$egrey-e8
+// //$default-border-alert	      :#ff805c;
+// $default-border-error         : $core-default-border-error;
+// $default-separator            : $core-default-separator;
 
 /**scrollbar**/
 $default-scrollbar-color :rgb(250 133 64 / 60%); //rgb(250, 133, 64, 0.6);
