--- a/src/drumee/skin/vars/color.scss
+++ b/src/drumee/skin/vars/color.scss
@@ -127,4 +127,7 @@
   --main-bg: --navy-color;
   /* main bbackground*/
 
+  --btn-secondary: --btn-rollback-text;
+  --btn-rollback-text-hover: #879BFF;
+
 }
