--- a/src/drumee/skin/vars/default.scss
+++ b/src/drumee/skin/vars/default.scss
@@ -21,6 +21,8 @@
   --default-background-error: #ea4d44;
   --default-background-caution: #ea4d44;
   --default-background-inactive: #89929e;
+  --default-scrollbar-color: rgba(250, 133, 64, 0.6);
+
   --background-tooltips: #e8e8e8;
   --default-background-alert: #fd635b;
   --button-background-active: rgb(137 146 158 / 35%);
