--- a/src/drumee/builtins/media/notifications/origin/skin/index.scss
+++ b/src/drumee/builtins/media/notifications/origin/skin/index.scss
@@ -128,7 +128,7 @@
       background-color:transparent;
     }
     &::-webkit-scrollbar-thumb {
-      background-color: $default-scrollbar-color;
+      background-color: var(--default-scrollbar-color);
       cursor: pointer;
     }
   }
