--- a/src/drumee/builtins/webrtc/endpoint/lense/skin/index.scss
+++ b/src/drumee/builtins/webrtc/endpoint/lense/skin/index.scss
@@ -66,7 +66,7 @@
     padding: 20px;
    // border-radius: 4px;
     position: absolute;
-    @include typo($size:18px,$line:30px,$color:$default-text-color); //$size:20px,$weight:300,
+    @include typo($size:18px,$line:30px,$color: var(--default-text-color)); //$size:20px,$weight:300,
     &[data-user="1"]{
       display: none;
     }
@@ -77,7 +77,7 @@
     left: 12px;
     min-height: 22px;
     //@include typo($color: var(--white), $weight: 400, $line: 30px, $size: 18px);
-    @include typo($color: $default-text-color, $line: 18px, $size: 13px);
+    @include typo($color: var(--default-text-color), $line: 18px, $size: 13px);
     background-color: $default-background;      
     min-width:105px;
     padding: 1px 10px;
