--- a/src/drumee/builtins/widget/chat/skin/index.scss
+++ b/src/drumee/builtins/widget/chat/skin/index.scss
@@ -117,7 +117,7 @@
 
     &[data-type="evaluation"]::after {
       @include license-trial();
-      @include typo($size: 18px, $line: 1.3, $color: $default-text-title);
+      @include typo($size: 18px, $line: 1.3, $color: var(--default-text-title));
       top: 0;
       transform: none;
       width: 100%;
@@ -158,7 +158,7 @@
           }
 
           &::-webkit-scrollbar-thumb {
-            background-color: $default-scrollbar-color;
+            background-color: var(--default-scrollbar-color);
             cursor: pointer;
           }
 
