--- a/src/drumee/builtins/widget/contact-invitation-form/skin/index.scss
+++ b/src/drumee/builtins/widget/contact-invitation-form/skin/index.scss
@@ -75,16 +75,16 @@
 
     &[data-status='error'] {
       & input {
-        border-bottom: 1px solid  var(--default-border-error);//$default-border-error;
+        border-bottom: 1px solid  var(--default-border-error);//var(--default-border-error);
         
         &:focus {
-          border-color: var(--default-border-error);// $default-border-error;
+          border-color: var(--default-border-error);// var(--default-border-error);
         }
       }
     }
 
     & input {
-      border-bottom: 1px solid var(--default-entry-border-bottom);//$entry-border-bottom;
+      border-bottom: 1px solid var(--default-entry-border-bottom);//var(--entry-border-bottom);
       width: 100%;
       @include typo($size: 16px, $line: 21px, $color: var(--default-text-color));
 
@@ -93,10 +93,10 @@
       }
 
       &:focus {
-        border-color:  var(--focus-border-placeholder);//$focus-border-bottom;
+        border-color:  var(--focus-border-placeholder);//var(--focus-border-bottom);
 
         @include placeholder-input {
-          color:  var(--focus-text-placeholder);// $focus-text-placeholder;
+          color:  var(--focus-text-placeholder);// var(--focus-text-placeholder);
         }
       }
 
@@ -119,7 +119,7 @@
         resize: none;
 
         &::placeholder {
-          @include typo($size: 14px, $line: 14px, $weight: 300, $color:var(--default-text-placeholder));// $default-text-placeholder);
+          @include typo($size: 14px, $line: 14px, $weight: 300, $color:var(--default-text-placeholder));// var(--default-text-placeholder));
         }
       }
     }
@@ -145,7 +145,7 @@
   }
 
   &__error {
-    color:  var(--default-text-error);//$default-text-error;
+    color:  var(--default-text-error);//var(--default-text-error);
     margin: auto;
   }
 
