--- a/src/drumee/builtins/widget/invitation/sharee/roll/skin/scrollbar.scss
+++ b/src/drumee/builtins/widget/invitation/sharee/roll/skin/scrollbar.scss
@@ -7,7 +7,7 @@
     background-color: transparent!important;
     &:after {
       content: " ";
-      background: $default-scrollbar-color;//#fa8540;
+      background: var(--default-scrollbar-color);//#fa8540;
       position: absolute;
       width: 2px;
       border-radius: 7px;
