--- a/src/drumee/builtins/window/account/data/skin/deletion.scss
+++ b/src/drumee/builtins/window/account/data/skin/deletion.scss
@@ -119,7 +119,7 @@
    // min-height: 174px;
     .drumee-text.inner{
       padding: 0;
-//      @include typo($size:16px,$line:26px,$weight:300,$color:$default-text-color);
+//      @include typo($size:16px,$line:26px,$weight:300,$color: var(--default-text-color));
     }
     .total{
       @include typo($size:14px,$line:26px,$weight:300,$color:$account-default-text-color);
