--- a/src/drumee/builtins/window/adminpanel/widget/member-choose-admins/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member-choose-admins/skin/index.scss
@@ -49,7 +49,7 @@
     }
     
     & *::-webkit-scrollbar-thumb {
-      background-color: $default-scrollbar-color;
+      background-color: var(--default-scrollbar-color);
       cursor: pointer;
     }
   }
