--- a/src/drumee/builtins/window/adminpanel/widget/member-who-can-see/skin/index.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member-who-can-see/skin/index.scss
@@ -59,7 +59,7 @@
     }
     
     & *::-webkit-scrollbar-thumb {
-      background-color: $default-scrollbar-color;
+      background-color: var(--default-scrollbar-color);
       cursor: pointer;
     }
   }
