--- a/src/drumee/builtins/window/bigchat/widget/chat-item-forward/skin/index.scss
+++ b/src/drumee/builtins/window/bigchat/widget/chat-item-forward/skin/index.scss
@@ -58,7 +58,7 @@
     }
     
     & *::-webkit-scrollbar-thumb {
-      background-color: $default-scrollbar-color;
+      background-color: var(--default-scrollbar-color);
       cursor: pointer;
     }
   }
