--- a/src/drumee/builtins/window/hub/skin/settings/general/field.scss
+++ b/src/drumee/builtins/window/hub/skin/settings/general/field.scss
@@ -9,7 +9,7 @@
   &:hover{
     &[data-edit="0"]{
       background-color:$default-background-hover;// #879BFF;
-      color:$default-text-reverse; // #FFFFFF;    
+      color:var(--default-text-reverse); // #FFFFFF;    
       .hub-icon{
         visibility: visible;
       }
