--- a/src/drumee/builtins/window/litechat/skin/index.scss
+++ b/src/drumee/builtins/window/litechat/skin/index.scss
@@ -99,7 +99,7 @@
           }
       
           &::-webkit-scrollbar-thumb {
-            background-color: $default-scrollbar-color;
+            background-color: var(--default-scrollbar-color);
             cursor: pointer;
           }
 
