--- a/src/drumee/builtins/window/screenshare/skin/index.scss
+++ b/src/drumee/builtins/window/screenshare/skin/index.scss
@@ -92,7 +92,7 @@
       padding: 10px;
       background-color: grey;
       margin: 10px;
-      color: $default-text-reverse; //white;
+      color: var(--default-text-reverse); //white;
       border-radius: 3px;
       @include typo($color: var(--default-text-reverse), $weight: 400, $line: 20px, $size: 16px);
     }
