--- a/src/drumee/builtins/window/share/skin/action-menu.scss
+++ b/src/drumee/builtins/window/share/skin/action-menu.scss
@@ -81,10 +81,10 @@
 
     &:hover {
       background-color: $default-background-hover;
-      color : $default-text-reverse; 
+      color : var(--default-text-reverse); 
 
       & .name {
-        color:$default-text-reverse; 
+        color:var(--default-text-reverse); 
       }
       
       & svg {
@@ -94,7 +94,7 @@
   }
 
   &__note {
-    @include typo($size: 13px, $weight: 300, $line: 14px, $color:$default-text-color);
+    @include typo($size: 13px, $weight: 300, $line: 14px, $color: var(--default-text-color));
     padding-top: 0px;
     bottom: 2px;
   }
