--- a/src/drumee/libs/reader/list/smart/skin/index.scss
+++ b/src/drumee/libs/reader/list/smart/skin/index.scss
@@ -8,7 +8,7 @@
     width: 100%;
 
     // for firefox scrollbar
-    scrollbar-color: $default-scrollbar-color $default-scrollbar-white;
+    scrollbar-color: var(--default-scrollbar-color) $default-scrollbar-white;
     scrollbar-width: thin;
 
     &::-webkit-scrollbar {
@@ -43,7 +43,7 @@
 
     &[data-type="trial"]::after {
       @include license-trial();
-      @include typo($size: 22px, $line: 1.3, $color: $default-text-title);
+      @include typo($size: 22px, $line: 1.3, $color: var(--default-text-title));
     }
 
     &[data-type="error"]::after {
