--- a/src/drumee/libs/reader/list/table/skin/index.scss
+++ b/src/drumee/libs/reader/list/table/skin/index.scss
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
 
-    scrollbar-color: $default-scrollbar-color $default-scrollbar-white;
+    scrollbar-color: var(--default-scrollbar-color) $default-scrollbar-white;
     scrollbar-width: thin;
     height: calc(100% - 60px);
 
@@ -76,7 +76,7 @@
 
     &[data-type="trial"]::after {
       @include license-trial();
-      @include typo($size: 22px, $line: 1.3, $color: $default-text-title);
+      @include typo($size: 22px, $line: 1.3, $color: var(--default-text-title));
     }
 
     &[data-type="error"]::after {
