--- a/src/drumee/modules/desk/notifier/share/skin/index.scss
+++ b/src/drumee/modules/desk/notifier/share/skin/index.scss
@@ -10,7 +10,7 @@
   &__ui{
     z-index : 1000;
     background-color: $transfert-main;  
-    color: $default-text-reverse; 
+    color: var(--default-text-reverse); 
     flex-shrink: 0;
     border-radius:$default-border-radius;
     box-shadow:var(--shadow-topbar);
