--- a/src/drumee/skin/global/entry/reminder.scss
+++ b/src/drumee/skin/global/entry/reminder.scss
@@ -7,22 +7,22 @@
   &__ui{
     border: 1px solid transparent;
     @include placeholder-input {
-      color:$default-text-placeholder; //$egrey-78;
+      color:var(--default-text-placeholder); //$egrey-78;
       font-weight: 300;
     }
   }
   &__component{
     width : 100%;
     &[data-status="error"] {
-      color:$default-text-error ;   ;// #FF4578;
+      color:var(--default-text-error);   ;// #FF4578;
       border-color: transparent;
       // .input-details {
       //   color: #FF4578;
       // }
       input {
-        border-color: $default-border-error;//#FF4578;    
+        border-color: var(--default-border-error);//#FF4578;    
         @include placeholder-input {
-          color:$default-text-placeholder; 
+          color:var(--default-text-placeholder); 
           font-weight: 300;   
         }            
       }
@@ -40,14 +40,14 @@
       min-height: 0;
       width: 100%;
       height: 100%;
-      border-bottom: 1px solid $entry-border-bottom;//#F1F1F6;
+      border-bottom: 1px solid var(--entry-border-bottom);//#F1F1F6;
       font-size: inherit;
       line-height: inherit;
       background: transparent;
       &:focus {
-        border-color: $focus-border-bottom; //#4A90E2;
+        border-color: var(--focus-border-bottom); //#4A90E2;
         @include placeholder-input {
-          color:$focus-text-placeholder; //#4A90E2; 
+          color:var(--focus-text-placeholder); //#4A90E2; 
          // font-weight: 300;
         }
       }
@@ -75,8 +75,8 @@
     min-height: 34px;
   }
   &_error{
-    @include typo($color: $default-text-error, $size: 12px);//$weight:300,
-  //  color: $default-text-error;//red;
+    @include typo($color: var(--default-text-error), $size: 12px);//$weight:300,
+  //  color: var(--default-text-error);//red;
   //  font-size: 12px;
     height: 40px;
     padding-left: 3px;
@@ -93,7 +93,7 @@
     right: -25px;
     top: 9px;   
     &.error{
-      @include typo($color: $default-text-error, $size: 12px);
+      @include typo($color: var(--default-text-error), $size: 12px);
       padding : 4.5px;
       // right: -46px;
       // top: 9px;      
