--- a/src/drumee/skin/global/input.scss
+++ b/src/drumee/skin/global/input.scss
@@ -49,15 +49,15 @@ textarea{
       }
     }
     &[data-status="error"] {
-      @include typo($color: $default-text-error, $size: 12px);
+      @include typo($color: var(--default-text-error), $size: 12px);
     //  color: #FF4578;
       border-color: transparent;
       .input-details {
     //    color: #FF4578;
-        @include typo($color: $default-text-error, $size: 12px);
+        @include typo($color: var(--default-text-error), $size: 12px);
       }
       input {
-        border-color:$default-border-error;    
+        border-color:var(--default-border-error);    
         @include placeholder-input {
           color:$egrey-78;
         }            
